Fix: fix issue with spacing on the featured section

--- a/css/index.css
+++ b/css/index.css
@@ -506,9 +506,6 @@ body {
     margin-top: 3rem;
     width: 40%;
   }
-  .feature-section .features .feature.nth-child {
-    height: 100%;
-  }
 }
 .how-to {
   display: flex;
