--- a/featured/featured.less
+++ b/featured/featured.less
@@ -99,8 +99,9 @@
       flex-wrap: wrap;
       .feature {
         margin-top: 3rem;
-        width: 45%;
+        width: 40%;
       }
+      
     }
   }
 }
